squirrel/analyzer/python_standalone/SquirrelParserParser.py
# Generated from SquirrelParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SquirrelParserParser ( Parser ):

    grammarFileName = "SquirrelParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'do'", "'for'", 
                     "'foreach'", "'in'", "'switch'", "'case'", "'default'", 
                     "'break'", "'continue'", "'return'", "'yield'", "'resume'", 
                     "'function'", "'local'", "'class'", "'extends'", "'constructor'", 
                     "'static'", "'enum'", "'const'", "'try'", "'catch'", 
                     "'throw'", "'delete'", "'clone'", "'typeof'", "'instanceof'", 
                     "'this'", "'base'", "'true'", "'false'", "'null'", 
                     "'rawcall'", "'int'", "'float'", "'string'", "'bool'", 
                     "'any'", "'array'", "'='", "'<-'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'<=>'", "'&&'", "'||'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'", "'!'", "'~'", 
                     "'&'", "'|'", "'^'", "'<<'", "'>>'", "'>>>'", "'?'", 
                     "':'", "'::'", "';'", "','", "'.'", "'...'", "'->'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "DO", "FOR", "FOREACH", 
                      "IN", "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", 
                      "RETURN", "YIELD", "RESUME", "FUNCTION", "LOCAL", 
                      "CLASS", "EXTENDS", "CONSTRUCTOR", "STATIC", "ENUM", 
                      "CONST", "TRY", "CATCH", "THROW", "DELETE", "CLONE", 
                      "TYPEOF", "INSTANCEOF", "THIS", "BASE", "TRUE", "FALSE", 
                      "NULL", "RAWCALL", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", 
                      "BOOL_TYPE", "ANY_TYPE", "ARRAY", "ASSIGN", "NEWSLOT", 
                      "PLUSEQ", "MINUSEQ", "MULEQ", "DIVEQ", "MODEQ", "EQ", 
                      "NE", "LT", "LE", "GT", "GE", "THREEWAY", "AND", "OR", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "PLUSPLUS", 
                      "MINUSMINUS", "NOT", "BITNOT", "BITAND", "BITOR", 
                      "BITXOR", "SHIFTL", "SHIFTR", "USHIFTR", "QUESTION", 
                      "COLON", "DOUBLECOLON", "SEMICOLON", "COMMA", "DOT", 
                      "VARPARAMS", "ARROW", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACKET", "RBRACKET", "INTEGER", "FLOAT", 
                      "STRING", "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_blockStatement = 2
    RULE_expressionStatement = 3
    RULE_ifStatement = 4
    RULE_whileStatement = 5
    RULE_doWhileStatement = 6
    RULE_forStatement = 7
    RULE_foreachStatement = 8
    RULE_switchStatement = 9
    RULE_caseStatement = 10
    RULE_defaultStatement = 11
    RULE_localDeclStatement = 12
    RULE_localDecl = 13
    RULE_returnStatement = 14
    RULE_yieldStatement = 15
    RULE_breakStatement = 16
    RULE_continueStatement = 17
    RULE_functionStatement = 18
    RULE_functionExpression = 19
    RULE_functionBody = 20
    RULE_parameterList = 21
    RULE_parameter = 22
    RULE_classStatement = 23
    RULE_classMember = 24
    RULE_constructorDecl = 25
    RULE_methodDecl = 26
    RULE_fieldDecl = 27
    RULE_enumStatement = 28
    RULE_enumMember = 29
    RULE_tryStatement = 30
    RULE_throwStatement = 31
    RULE_constStatement = 32
    RULE_typeAnnotation = 33
    RULE_type = 34
    RULE_baseType = 35
    RULE_primitiveType = 36
    RULE_arrayType = 37
    RULE_functionType = 38
    RULE_tableType = 39
    RULE_objectMember = 40
    RULE_expression = 41
    RULE_assignmentExpression = 42
    RULE_assignmentOperator = 43
    RULE_conditionalExpression = 44
    RULE_logicalOrExpression = 45
    RULE_logicalAndExpression = 46
    RULE_bitwiseOrExpression = 47
    RULE_bitwiseXorExpression = 48
    RULE_bitwiseAndExpression = 49
    RULE_equalityExpression = 50
    RULE_relationalExpression = 51
    RULE_shiftExpression = 52
    RULE_additiveExpression = 53
    RULE_multiplicativeExpression = 54
    RULE_unaryExpression = 55
    RULE_postfixExpression = 56
    RULE_primaryExpression = 57
    RULE_arrayLiteral = 58
    RULE_tableLiteral = 59
    RULE_tableMember = 60
    RULE_argumentList = 61
    RULE_literal = 62
    RULE_scalar = 63
    RULE_identifier = 64

    ruleNames =  [ "program", "statement", "blockStatement", "expressionStatement", 
                   "ifStatement", "whileStatement", "doWhileStatement", 
                   "forStatement", "foreachStatement", "switchStatement", 
                   "caseStatement", "defaultStatement", "localDeclStatement", 
                   "localDecl", "returnStatement", "yieldStatement", "breakStatement", 
                   "continueStatement", "functionStatement", "functionExpression", 
                   "functionBody", "parameterList", "parameter", "classStatement", 
                   "classMember", "constructorDecl", "methodDecl", "fieldDecl", 
                   "enumStatement", "enumMember", "tryStatement", "throwStatement", 
                   "constStatement", "typeAnnotation", "type", "baseType", 
                   "primitiveType", "arrayType", "functionType", "tableType", 
                   "objectMember", "expression", "assignmentExpression", 
                   "assignmentOperator", "conditionalExpression", "logicalOrExpression", 
                   "logicalAndExpression", "bitwiseOrExpression", "bitwiseXorExpression", 
                   "bitwiseAndExpression", "equalityExpression", "relationalExpression", 
                   "shiftExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "postfixExpression", "primaryExpression", 
                   "arrayLiteral", "tableLiteral", "tableMember", "argumentList", 
                   "literal", "scalar", "identifier" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    DO=4
    FOR=5
    FOREACH=6
    IN=7
    SWITCH=8
    CASE=9
    DEFAULT=10
    BREAK=11
    CONTINUE=12
    RETURN=13
    YIELD=14
    RESUME=15
    FUNCTION=16
    LOCAL=17
    CLASS=18
    EXTENDS=19
    CONSTRUCTOR=20
    STATIC=21
    ENUM=22
    CONST=23
    TRY=24
    CATCH=25
    THROW=26
    DELETE=27
    CLONE=28
    TYPEOF=29
    INSTANCEOF=30
    THIS=31
    BASE=32
    TRUE=33
    FALSE=34
    NULL=35
    RAWCALL=36
    INT_TYPE=37
    FLOAT_TYPE=38
    STRING_TYPE=39
    BOOL_TYPE=40
    ANY_TYPE=41
    ARRAY=42
    ASSIGN=43
    NEWSLOT=44
    PLUSEQ=45
    MINUSEQ=46
    MULEQ=47
    DIVEQ=48
    MODEQ=49
    EQ=50
    NE=51
    LT=52
    LE=53
    GT=54
    GE=55
    THREEWAY=56
    AND=57
    OR=58
    PLUS=59
    MINUS=60
    MUL=61
    DIV=62
    MOD=63
    PLUSPLUS=64
    MINUSMINUS=65
    NOT=66
    BITNOT=67
    BITAND=68
    BITOR=69
    BITXOR=70
    SHIFTL=71
    SHIFTR=72
    USHIFTR=73
    QUESTION=74
    COLON=75
    DOUBLECOLON=76
    SEMICOLON=77
    COMMA=78
    DOT=79
    VARPARAMS=80
    ARROW=81
    LPAREN=82
    RPAREN=83
    LBRACE=84
    RBRACE=85
    LBRACKET=86
    RBRACKET=87
    INTEGER=88
    FLOAT=89
    STRING=90
    IDENTIFIER=91
    LINE_COMMENT=92
    BLOCK_COMMENT=93
    WS=94

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SquirrelParserParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParserParser.StatementContext)
            else:
                return self.getTypedRuleContext(SquirrelParserParser.StatementContext,i)


        def getRuleIndex(self):
            return SquirrelParserParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SquirrelParserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1729382324519827834) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 257171471) != 0):
                self.state = 130
                self.statement()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(SquirrelParserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ExpressionStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ForeachStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.SwitchStatementContext,0)


        def localDeclStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.LocalDeclStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ReturnStatementContext,0)


        def yieldStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.YieldStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ContinueStatementContext,0)


        def functionStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.FunctionStatementContext,0)


        def classStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ClassStatementContext,0)


        def enumStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.EnumStatementContext,0)


        def tryStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.TryStatementContext,0)


        def throwStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ThrowStatementContext,0)


        def constStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.ConstStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(SquirrelParserParser.BlockStatementContext,0)


        def SEMICOLON(self):
            return self.getToken(SquirrelParserParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SquirrelParserParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SquirrelParserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.expressionStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.doWhileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.foreachStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 144
                self.switchStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 145
                self.localDeclStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 146
                self.returnStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 147
                self.yieldStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 148
                self.breakStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 149
                self.continueStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 150
                self.functionStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 151
                self.classStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 152
                self.enumStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 153
                self.tryStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 154
                self.throwStatement()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 155
                self.constStatement()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 156
                self.blockStatement()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 157
                self.match(SquirrelParserParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SquirrelParserParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SquirrelParserParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParserParser.StatementContext)
            else:
                return self.getTypedRuleContext(SquirrelParserParser.StatementContext,i)


        def getRuleIndex(self):
            return SquirrelParserParser.RULE_blockStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)




    def blockStatement(self):

        localctx = SquirrelParserParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blockStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(SquirrelParserParser.LBRACE)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1729382324519827834) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 257171471) != 0):
                self.state = 161
                self.statement()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(SquirrelParserParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SquirrelParserParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(SquirrelParserParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SquirrelParserParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = SquirrelParserParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expression()
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 170
                self.match(SquirrelParserParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SquirrelParserParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SquirrelParserParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParserParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SquirrelParserParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParserParser.StatementContext)
            else:
                return self.getTypedRuleContext(SquirrelParserParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(SquirrelParserParser.ELSE, 0)

        def getRuleIndex(self):
            return SquirrelParserParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = SquirrelParserParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(SquirrelParserParser.IF)
            self.state = 174
            self.match(SquirrelParserParser.LPAREN)
            self.state = 175
            self.expression()
            self.state = 176
            self.match(SquirrelParserParser.RPAREN)
            self.state = 177
            self.statement()
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 178
                self.match(SquirrelParserParser.ELSE)
                self.state = 179
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SquirrelParserParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(SquirrelParserParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParserParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SquirrelParserParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(SquirrelParserParser.StatementContext,0)


        def getRuleIndex(self):
            return SquirrelParserParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):
